<resources>
    <string name="app_name">Proyecto_Movil</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Iniciar Sesión</string>
    <string name="registro">Registrarme</string>
    <string name="registrar">¿No tienes cuenta en MIDA Pets?</string>
    <string name="recuperar">Recuperar contraseña olvidada</string>
    <string name="anuncio">Nuevo anuncio</string>
    <string name="anuncio_descripcion">Escoje la opcion que se ajuste a lo que quieres anunciar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>